<resources>
    <string name="app_name">AndroidFinal</string>
    <string name="MainAndrewButton">Andrew\'s OC Transpo Activity</string>
    <string name="AndrewTitleText">Stop Number</string>
    <string name="AndrewStopHelp">Enter Stop Number</string>
    <string name="AndrewInfoButton">Get Info</string>
    <string name="AndrewDetailTitle">Detailed View</string>
    <string name="AndrewDetailStopNumber"></string>
    <string name="AndrewStopSearchSnack">Stop Deleted </string>
    <string name="Continue">Continue</string>
    <string name="Delete">Delete</string>
    <string name="myButton">Add</string>
    <string name="TypeHere">Type Here</string>
    <string name="MainRobinButton">Robin\'s Quiz</string>
    <string name="MainShadiButton">Shadi\'s Movies</string>
    <string name="MainBilalButton">Bilal\'s Clinic</string>
    <string name="addMovie">Add a movie</string>
    <string name="button_label">Movie Label</string>
    <string name="dialog_button_label">Details about the Movie</string>
    <string name="help">Help</string>
    <string name="statistic">Statistics</string>
    <string name="getMovieFromXML">Movies from the URL</string>
    <string name="movie_all">Entered Movies</string>
    <string name="popularMovie">Popular</string>
    <string name="button_addMovie">Add a Movie</string>
    <string name="cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_update">Update</string>
    <string name="MovieDescription">Description</string>
    <string name="MovieGenre">General</string>
    <string name="MovieLength">Length of the Moveie</string>
    <string name="MainActors">Main Actors</string>
    <string name="MovieTitle">The Movies\'s Title</string>
    <string name="toast_movie">go back the to main activity</string>
    <string name="help_author">Author Help</string>
    <string name="help_version">Version Help</string>
    <string name="help_instruction">Instruction Help</string>
    <string name="ok">Ok</string>
    <string name="movie_dialog_message">Delete</string>
    <string name="movie_dialog_title">DELETE</string>
    <string name="movie_help_author"> Author Help: Shadi Al Khalil</string>
    <string name="movie_help_version"> Version: 1 </string>
    <string name="title_activity_andrew_transpo_stop">AndrewTranspoStop</string>
    <string name="action_settings">Settings</string>
    <string name="AndrewStopSearchSnackUndelete">Re-Add</string>
    <string name="TextViewMultipleR"> Multiple Text View </string>
    <string name="submitMultipleR"> Submit Choice </string>
</resources>
