<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.andrew.androidfinal.MainActivity"
    android:theme="@style/Theme.AppCompat.DayNight"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/Theme.AppCompat.DayNight"
        />

    <Button
        android:id="@+id/MainAndrewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainAndrewButton"
        android:layout_alignParentStart="true"
        android:layout_below="@id/toolbarMain"
        />
    <Button
        android:id="@+id/MainShadiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainShadiButton"
        android:layout_below="@id/MainAndrewButton"
        android:layout_alignParentStart="true"
        />
    <Button
        android:id="@+id/MainBilalButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainBilalButton"
        android:layout_below="@id/MainShadiButton"
        android:layout_alignParentStart="true"
        />
    <Button
        android:id="@+id/MainRobinButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/MainRobinButton"
        android:layout_below="@id/MainBilalButton"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>
